--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	
+    <div class="main-container">
+
+
+        <div class="proces">
+
+            <div class="progress" id="progress"> </div>
+            <div class="circle active">1</div>
+            <div class="circle">2</div>
+            <div class="circle">3</div>
+            <div class="circle">4</div>
+        </div>
+        <button class="btn " id="pre" disabled>PRE</button>
+        <button class="btn " id="next">NEXT</button>
+    </div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
