--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
             <div class="circle" id="circle-2">2</div>
             <div class="circle" id="circle-3">3</div>
             <div class="circle" id="circle-4">4</div>
+            <div class="circle" id="circle-5">5</div>
         </div>
         <button class="btn" id="prev" disabled>PRE</button>
         <button class="btn" id="next">NEXT</button>
